# packages-site-rs

./: .gitignore  Cargo.toml  README.md  about.toml  config.toml  shell.nix
data/: .gitkeep
src/: config.rs  db.rs  filters.rs  main.rs  sql.rs  utils.rs  views.rs
src/views/: index.rs  misc.rs  mod.rs  package.rs  qa.rs  repo.rs  search.rs  tree.rs
static/: autocomplete.js  fonts.css  style.css
templates/: base.html  changelog.txt  cleanmirror.txt  error.html  files.html  files.tsv  ghost.html  ghost.tsv  index.html  lagging.html  lagging.tsv  legend.inc.html  license.html  missing.html  missing.tsv  package.html  pagination.inc.html  pagination.inc.macros.html  qa_code.html  qa_code.tsv  qa_index.html  qa_index.tsv  qa_package.html  query.tsv  repo.html  repo.tsv  revdep.html  revdep.tsv  search.html  search.tsv  srcupd.html  srcupd.tsv  tree.html  tree.tsv  updates.html
