[package]
name = "packages-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2"
axum-extra = { version = "0.3.6", features = ["typed-routing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["trace", "fs"] }
toml = "0.5.9"
anyhow = "1.0.58"
askama = { git = "https://github.com/djc/askama", features = ["with-axum"] }
askama_axum = { git = "https://github.com/djc/askama" }
thiserror = "1.0.31"
time = { version = "0.3.11", default-features = false, features = [
    "formatting",
] }
textwrap = "0.15"
sqlx = { version = "*", features = [
    "sqlite",
    "postgres",
    "runtime-tokio-rustls",
] }
rust-embed = "6.4.0"
mime_guess = "2.0.4"
deb-version = "0.1"
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
html-escape = "0.2"
abbs-meta-tree = { git = "https://github.com/7rah/abbs-meta-rs" }
size = "0.4"
itertools = "0.10.2"
hex = "0.4.3"
proc-macro-regex = "1.1.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
