[package]
name = "packages-site"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zrah <zrah@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2"
axum-extra = { version = "0.3", features = ["typed-routing"] }
tower-http = { version = "0.3", features = ["trace", "fs"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [
    "sqlite",
    "postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "^1", features = ["derive"] }
toml = "0.5"
anyhow = "^1"
askama = "0.11"
thiserror = "^1"
time = { version = "0.3", default-features = false, features = ["formatting"] }
textwrap = "0.15"
rust-embed = "^6"
mime_guess = "^2"
deb-version = "0.1"
serde_json = "^1"
indexmap = { version = "^1", features = ["serde"] }
html-escape = "0.2"
abbs-meta-tree = { git = "https://github.com/7rah/abbs-meta-rs" }
size = "0.4"
itertools = "0.10"
hex = "0.4"
proc-macro-regex = "^1"
structopt = "0.3"

[profile.dev.package.askama_derive]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
