[package]
name = "packages-site"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zrah <zrah@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
axum-extra = { version = "0.7", features = ["typed-routing"] }
tower-http = { version = "0.4", features = ["trace", "fs"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time"
] }
serde = { version = "^1", features = ["derive"] }
toml = "0.7"
anyhow = "^1"
askama = "0.12"
thiserror = "^1"
time = { version = "0.3", default-features = false, features = ["formatting", "serde"] }
textwrap = "0.16"
rust-embed = "^6"
mime_guess = "^2"
deb-version = "0.1"
serde_json = "^1"
indexmap = { version = "^1", features = ["serde"] }
html-escape = "0.2"
abbs-meta-tree = { git = "https://github.com/AoSC-Dev/abbs-meta-rs" }
size = "0.4"
itertools = "0.10"
hex = "0.4"
proc-macro-regex = "^1"
structopt = "0.3"
hyper = "0.14"
hyperlocal = "0.8"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = "0.22.0"
tracing-opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
reqwest = "0.11.24"

[profile.dev.package.askama_derive]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
